[gd_scene load_steps=5 format=3 uid="uid://bcc5npagsrcps"]

[ext_resource type="Script" path="res://scripts/enemy_bullet.gd" id="1_fda7g"]
[ext_resource type="Script" path="res://compo/HitboxComponent.gd" id="2_bpdiw"]
[ext_resource type="Texture2D" uid="uid://b16su4dw1t7bd" path="res://art/enemy/enemy_projectile.png" id="3_whkm7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_smtvo"]
radius = 4.0

[node name="EnemyBullet" type="Node2D"]
script = ExtResource("1_fda7g")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("2_bpdiw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_smtvo")

[node name="EnemyProjectile" type="Sprite2D" parent="."]
texture = ExtResource("3_whkm7")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
